--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
