--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "sass": "^1.69.7",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
